Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/processing/errors/EnsureMirroredTypeException/Source.out
Source.java:12:28: compiler.err.doesnt.exist: some.path.to
Source.java:15:16: compiler.err.cant.resolve: kindname.class, SomeUnknownClass, , 
Source.java:18:16: compiler.err.cant.resolve: kindname.variable, SomeUnknownClass, , 
3 errors
